; ModuleID = '/home/carl/AnghaBench/freebsd/bin/ed/extr_main.c_get_marked_node_addr.c'
source_filename = "/home/carl/AnghaBench/freebsd/bin/ed/extr_main.c_get_marked_node_addr.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [23 x i8] c"invalid mark character\00", align 1
@errmsg = common dso_local global i8* null, align 8
@ERR = common dso_local global i64 0, align 8
@mark = common dso_local global i32* null, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i64 @get_marked_node_addr(i32 %0) #0 {
  %2 = alloca i64, align 8
  %3 = alloca i32, align 4
  store i32 %0, i32* %3, align 4
  %4 = load i32, i32* %3, align 4
  %5 = trunc i32 %4 to i8
  %6 = call i32 @islower(i8 zeroext %5)
  %7 = icmp ne i32 %6, 0
  br i1 %7, label %10, label %8

8:                                                ; preds = %1
  store i8* getelementptr inbounds ([23 x i8], [23 x i8]* @.str, i64 0, i64 0), i8** @errmsg, align 8
  %9 = load i64, i64* @ERR, align 8
  store i64 %9, i64* %2, align 8
  br label %18

10:                                               ; preds = %1
  %11 = load i32*, i32** @mark, align 8
  %12 = load i32, i32* %3, align 4
  %13 = sub nsw i32 %12, 97
  %14 = sext i32 %13 to i64
  %15 = getelementptr inbounds i32, i32* %11, i64 %14
  %16 = load i32, i32* %15, align 4
  %17 = call i64 @get_line_node_addr(i32 %16)
  store i64 %17, i64* %2, align 8
  br label %18

18:                                               ; preds = %10, %8
  %19 = load i64, i64* %2, align 8
  ret i64 %19
}

declare dso_local i32 @islower(i8 zeroext) #1

declare dso_local i64 @get_line_node_addr(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
